# feature-toggle

./: .dockerignore  .gitignore  Cargo.toml  DASHBOARD_IMPLEMENTATION.md  DOCKER.md  Dockerfile  FEATURE_EVALUATION_TRACKING.md  GEMINI.md  GRAPHQL_QUERY_FIXES.md  MIGRATION_GUIDE.md  Makefile  OPENFEATURE_ALIGNMENT_ANALYSIS.md  PASSWORD_MANAGEMENT_IMPLEMENTATION.md  ReadME.md  SET_TEMPORARY_PASSWORD_IMPLEMENTATION.md  SUBSCRIPTION_MIGRATION_TASKS.md  TEST_SETUP.md  config.toml  docker-compose.api-tests.yml  docker-compose.yml  entrypoint.sh  init.sql  package.json  populate_test_data.js  test_evaluation_tracking.rs  test_output.txt
feature-edge-server/: CONFIG.md  CONFIGURATION_MIGRATION.md  CONNECTION_LOSS_FIX.md  Cargo.toml  Dockerfile  LOAD_TESTING.md  MODULARIZATION_SUMMARY.md  PERFORMANCE_OPTIMIZATION_PLAN.md  QUICK_START_OPTIMIZATION.md  RETRY_CONFIG_INTEGRATION.md  RETRY_IMPLEMENTATION.md  RETRY_IMPLEMENTATION_SUMMARY.md  RETRY_SCENARIOS.md  build.rs  config.toml  log4rs.yaml
feature-edge-server/src/: config.rs  grpc_client.rs  handlers.rs  kill_switch.rs  main.rs  main.rs.backup
feature-toggle-backend/: .env  ACTIVITY_LOG_IMPLEMENTATION.md  AGENTS.md  CLUSTER_DB_DISCOVERY_PLAN.md  CLUSTER_TESTS_README.md  Cargo.toml  DB_DISCOVERY_IMPLEMENTATION.md  Dockerfile  FEATURE_GROWTH_QUERY_IMPLEMENTATION.md  JWT_MIGRATION.md  JWT_SECRET_DIAGNOSTICS.md  MULTI_INSTANCE_AUTH_FIX.md  MULTI_INSTANCE_AUTH_ISSUE_ANALYSIS.md  RBAC.md  RBAC_IMPLEMENTATION.md  TOP_FEATURES_QUERY_IMPLEMENTATION.md  build.rs  config.toml  diesel.toml  log4rs.yaml  test_jwt.sh
feature-toggle-backend/.sqlx/: query-05c1fd05a9a4cb89af321da5141e9eb60e305f18d2b8c26301b9e18881c5e806.json  query-0653d7354705fd961a1fbffcecfbc05266a5af016fce08e21d5bebd9aca9b2c1.json  query-0712079db14abaf64ddb142a9433ce3305a973d352947eef4fdd9ffde998ff60.json  query-08553ce6386ceb5cad3e977da1051209bdc46b75284750733e0c9a55639c5b34.json  query-0b835ec311512588f6a11be7e9c0b7fcd4affc37e946ab07ce0740c1c9ed03f1.json  query-0c388ddb2ccc3f6b5ab459075fd9aab760a93ef691f62accab1a2be06db3f318.json  query-1092c64cfd5f3ded6a9adf1d51babffdfa1fb800052dcfaae7b79d35fae04509.json  query-136b1c25c060281123195d96116a81da6e486f3acad253949fbdf842fbf1a84e.json  query-14229b055605b0857873d2fcdfd8ed719f5000f2d1a40a9ecc3670a246426d76.json  query-14cece7302a7b02685ec1844141ae2c5412b86574bda387a7d24cb3d48036411.json  query-14fe24422e5bed17f412a6c186c1cf19879447d35a217c50ad45d75c46c23533.json  query-1c99b808c5fb525575ddfc0c7a12c1c4ad140a72cff4378ac1e0d6325fe0f0a8.json  query-229720ee4634df95912dcc3e74de4b5c42b4dc4b34c969adad7fd66a8423d0e0.json  query-233440fb54de6d7bf91ff8858f56f93e1539f14eaffe9f962d1b77d2dda0c539.json  query-2382a42e824bbeccbad09b33e688bcd107e247f06f51d69bcc1a81829e3e2361.json  query-26dd31f300e9536830ce8d4eff8f28ac990cd79207d8975123fb8ce7a9285532.json  query-28ff40141db758d9405c53fa559e9acc295639fb2d3007f4bca90a2bb8e6186a.json  query-29db6d90a986072b6d59ec41f7a0be7b994018955c2ef25daa9224043c8c9181.json  query-2b6709424d7313cb3be6f4a98447d9c85974d988b9f0528c6acd7432a4dc5880.json  query-2ba988d5d9207a8ec6debfe1547a32b72bbcfab766005185348d1d789e72f8d7.json  query-2e4460f88845f6fbfadd05e0a901087c113ac37458199a5ca743fb3c5c684329.json  query-3096d7da507e6894eb3322366a77d3a95e72b886eb386fa7d1a6f191c38555c2.json  query-313bdcc81e0597664c96efded770abd8a611a753d8e0a05a15cf9ebf1b5a2756.json  query-32e8502ff11ad3ba611950d4445f0f841930af1588ec614362e90728b65239e8.json  query-39b1322a3979a9c4424a7f5e6f2a66e72316c0958af1c5f0de0c6cead787edb9.json  query-3a5ead71c0b543b0ed996aced58e8627f421b85d6c530443c3e901cd84bc10dc.json  query-3a8e54be87ef7c3fcee229f072c706e27157fd8122fb1fb8598278e9b926b54b.json  query-3c6c73037e0f51078b935fd258b319f03c8119c7ca405c9af5466b188d114fac.json  query-4173dd321fde26c3adf61b3b607938ef5b849f6b799b35cc4e9974a9a5fc5c7f.json  query-42c941c2b70ec72e47d452d419feb385821b65dcdd9c504a730fdd2f05141171.json  query-439d162e541a76a55f9148afaf2de4d7433743e22dda8290b3da43991b9e3b57.json  query-44713066ffb3404cb42045e61d841476d78d45d87fc55cdfd55068578c6ec8ef.json  query-4477316ce21be5af6d43ed2875033cd7467cf02e1f70af43df4e21421ab264db.json  query-44dd5b3ba1629aef9987ea4a836fb9ba405bc489fea31b49e8c9391f1fbfd958.json  query-465555523ac79876c7b2c61e7eff718cd1f44ba63fb85ab4922955d71c05450a.json  query-47dcb4d4bde74ba1a1703c33e4624ebb38ad2989beaec62c408e63a84804f985.json  query-4947b78e9e5e1d76b875fbc5e0c5a64bee3c1b65d05968da18bb7a809375ebb8.json  query-4d92283d981823561c7bdd16cf000bc54d6a2e387db3265d0086dd141c77b743.json  query-547db7da0a0ca8e3c3838f5b53f42c5ffbb35d81e3c6ba204c192a6f99b27761.json  query-55806ff354612c446282340c636e467bcceaa5b33ca1ebaff30a3e4c7ab05d83.json  (+79 more)
feature-toggle-backend/examples/: debug_feature_test.rs
feature-toggle-backend/migrations/: 20250529182203_create_environments_table.sql  20250529182231_create_pipeline_table.sql  20250529182257_create_stage_table.sql  20250529182308_create_features_table.sql  20250529182316_create_feature_environment_states_table.sql  20250529182316_create_feature_pipelines_table.sql  20250529182325_create_feature_dependencies_states_table.sql  20250607151431_initial_db_setup.sql  20250706014159_feature_context.sql  20250808203600_add_clients.sql  20250810061700_team_contexts.sql  20250810214500_feature_stage_contexts.sql  20250811131000_feature_stage_criteria_and_bucketing.sql  20250821060000_create_users.sql  20250824203500_user_flag_assignments.sql  20250825221800_add_user_enabled.sql  20250827053100_user_teams.sql  20250829052500_stage_deployment_workflow.sql  20250830223000_remove_stage_enabled.sql  20250901000000_add_stage_enabled_column.sql  20250902000000_jwt_tokens.sql  20250903000000_create_roles.sql  20250904000000_jwt_secrets.sql  20250904100000_create_feature_evaluations.sql  20250905100000_add_prior_assignment_column.sql  20250906120000_add_temporary_password_column.sql  20250921000000_add_kill_switch_feature.sql  20251013000000_create_activity_log.sql  20251025061946_create_cluster_nodes_table.sql  20251031000000_feature_status.sql  (+31 more)
feature-toggle-ui/: Cargo.toml  index.html
(+341 files in other folders)
