[package]
name = "feature-edge-server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.45", features = ["full"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# gRPC client
tonic = { version = "0.12" }
prost = { version = "0.13" }
tokio-stream = "0.1"
# evaluation engine
evaluation-engine = { path = "../evaluation-engine" }

[build-dependencies]
tonic-build = { version = "0.12" }
protoc-bin-vendored = "3"
