[package]
name = "feature-edge-server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.45", features = ["full"] }
tracing = "0.1"
# gRPC client
tonic = { version = "0.12" }
prost = { version = "0.13" }
tokio-stream = "0.1"
# evaluation engine
evaluation-engine = { path = "../evaluation-engine" }
log4rs = "1.3.0"
# OpenAPI / Swagger docs
utoipa = { version = "4", features = ["actix_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "7", features = ["actix-web"] }

[build-dependencies]
tonic-build = { version = "0.12" }
protoc-bin-vendored = "3"
