[package]
name = "feature-toggle-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
async-graphql = { version = "7.0.17", features = [
    "uuid",
    "apollo_tracing",
    "dataloader",
] }
async-graphql-actix-web = "7.0.17"
tokio = { version = "1.45.1", features = ["full"] }
evaluation-engine = { path = "../evaluation-engine" }
uuid = { version = "1.17.0", features = ["v4", "serde"] }
actix-cors = "0.7.1"
sqlx = { version = "0.8.6", features = [
    "postgres",
    "runtime-tokio-native-tls",
    "macros",
    "uuid",
    "chrono",
] }
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
async-trait = "0.1.88"
mockall = "0.13.1"
log = "0.4.27"
log4rs = "1.3.0"
futures-util = "0.3.31"
chrono = { version = "0.4", features = ["serde"] }
rand = { version = "0.9.1" }
argon2 = { version = "0.5", features = ["password-hash"] }
password-hash = "0.5"
# gRPC
tonic = { version = "0.12" }
prost = { version = "0.13" }
# stream wrappers
tokio-stream = "0.1"
# config parsing
toml = "0.8"
serde_json = "1.0"
jsonwebtoken = "9.3"
sha2 = "0.10"
base64 = "0.22.1"
async-stream = "0.3.6"

[build-dependencies]
tonic-build = { version = "0.12" }
protoc-bin-vendored = "3"

[dev-dependencies]
async-trait = "0.1.88"
mockall = "0.13.1"
serde_json = "1.0"
