[package]
name = "feature-toggle-ui"
version = "0.1.0"
edition = "2024"

[dependencies]
console_error_panic_hook = "0.1.7"
console_log = { version = "1.0.0", features = ["wasm-bindgen"] }
leptos = { version = "0.8.2", features = ["csr"] }
leptos_meta = "0.8.2"
leptos_router = "0.8.2"
wasm-bindgen = "0.2.100"
log = "0.4.27"
